--- a/package.json
+++ b/package.json
@@ -3,13 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/runtime": "^7.17.9",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-runtime": "^6.26.0",
+    "buffer": "^6.0.3",
+    "node-sass": "^7.0.1",
     "react": "^18.0.0",
+    "react-custom-tree": "^1.0.3",
     "react-dom": "^18.0.0",
+    "react-dropzone": "^12.0.5",
+    "react-json-tree": "^0.12.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "timers": "^0.1.1",
+    "web-vitals": "^2.1.4",
+    "xml2js": "^0.4.23"
   },
   "scripts": {
     "start": "react-scripts start",
